--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
 
     <color name="favorite">#ce2a11</color>
     <color name="unFavorite">#7e8489</color>
+    <color name="circle_background">#e0e0e0</color>
 </resources>
