trailers visualization was changed

--- a/app/src/main/res/layout-land/fragment_details.xml
+++ b/app/src/main/res/layout-land/fragment_details.xml
@@ -126,21 +126,6 @@
                     app:layout_constraintTop_toTopOf="@+id/details_rating_tv"
                     app:srcCompat="@drawable/ic_star" />
 
-                <LinearLayout
-                    android:id="@+id/details_trailers_container"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/details_general_margin"
-                    android:layout_marginStart="@dimen/details_general_margin"
-                    android:layout_marginTop="@dimen/details_top_margin"
-                    android:orientation="horizontal"
-                    android:visibility="@{viewmodel.pagerExpanded||viewmodel.dataLoading? View.GONE: View.VISIBLE}"
-                    app:layout="@{viewmodel.trailerLayout}"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/details_main_img"
-                    app:layout_constraintTop_toBottomOf="@+id/details_date_tv"
-                    app:trailers="@{viewmodel.trailersList}" />
-
                 <TextView
                     android:id="@+id/details_overview_header_tv"
                     android:layout_width="0dp"
@@ -155,7 +140,7 @@
                     android:visibility="@{viewmodel.pagerExpanded||viewmodel.dataLoading? View.GONE: View.VISIBLE}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/details_main_img"
-                    app:layout_constraintTop_toBottomOf="@+id/details_trailers_container" />
+                    app:layout_constraintTop_toBottomOf="@+id/details_rating_tv" />
 
                 <TextView
                     android:id="@+id/details_overview_tv"
@@ -178,6 +163,19 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/details_trailers_container"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_marginEnd="@dimen/details_general_margin"
+                    android:layout_marginStart="@dimen/details_general_margin"
+                    android:layout_marginTop="@dimen/details_top_margin"
+                    android:visibility="@{viewmodel.pagerExpanded||viewmodel.dataLoading? View.GONE: View.VISIBLE}"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:trailers="@{viewmodel.trailersList}" />
+
                 <TextView
                     android:id="@+id/details_pager_header_tv"
                     android:layout_width="0dp"
@@ -192,7 +190,7 @@
                     android:visibility="@{viewmodel.dataLoading? View.GONE: View.VISIBLE}"
                     app:layout_constraintEnd_toStartOf="@+id/details_pager_container_resize_btn"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toBottomOf="@+id/details_trailers_container" />
 
                 <View
                     android:id="@+id/detail_pager_divider"
@@ -220,6 +218,8 @@
                     app:layout_constraintBottom_toBottomOf="@+id/details_pager_header_tv"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/details_pager_header_tv" />
+
+
 
                 <RelativeLayout
                     android:id="@+id/details_pager_container"
@@ -268,7 +268,6 @@
             </android.support.constraint.ConstraintLayout>
 
         </LinearLayout>
-
 
     </com.baikaleg.v3.popularmovies2.ui.details.ReviewScrollView>
 
