--- a/app/src/main/res/layout-land/fragment_details.xml
+++ b/app/src/main/res/layout-land/fragment_details.xml
@@ -37,8 +37,8 @@
 
                 <ImageView
                     android:id="@+id/details_main_img"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="100dp"
+                    android:layout_height="200dp"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_marginLeft="@dimen/details_general_margin"
@@ -134,7 +134,7 @@
                     android:layout_alignParentStart="true"
                     android:layout_marginEnd="@dimen/details_general_margin"
                     android:layout_marginStart="@dimen/details_general_margin"
-                    android:layout_marginTop="@dimen/details_top_margin"
+                    android:layout_marginTop="@dimen/details_general_margin"
                     android:text="@string/overview"
                     android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                     android:visibility="@{viewmodel.pagerExpanded||viewmodel.dataLoading? View.GONE: View.VISIBLE}"
@@ -148,11 +148,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="@dimen/details_general_margin"
                     android:layout_marginStart="@dimen/details_general_margin"
-                    android:layout_marginTop="@dimen/details_top_margin"
                     android:text="@{viewmodel.overview}"
                     android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                     android:visibility="@{viewmodel.pagerExpanded||viewmodel.dataLoading? View.GONE: View.VISIBLE}"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/details_main_img"
                     app:layout_constraintTop_toBottomOf="@+id/details_overview_header_tv" />
@@ -165,8 +163,8 @@
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/details_trailers_container"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginEnd="@dimen/details_general_margin"
                     android:layout_marginStart="@dimen/details_general_margin"
                     android:layout_marginTop="@dimen/details_top_margin"
@@ -227,7 +225,6 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:layout_marginBottom="@dimen/details_top_margin"
                     android:visibility="@{viewmodel.reviewsList.size()==0||viewmodel.reviewsList==null||viewmodel.dataLoading?View.GONE: View.VISIBLE}"
                     app:layout_constraintTop_toBottomOf="@+id/detail_pager_divider">
 
